--- a/Bootstrap/Linkedin-Clone/index.html
+++ b/Bootstrap/Linkedin-Clone/index.html
@@ -8,10 +8,12 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="Csss.css">
+    <link rel="stylesheet" href="fontawesome/css/all.min.css">
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <title>Linkedin</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    
 
     <!-- Optional JavaScript; choose one of the two! -->
 
