--- a/Bootstrap/Linkedin-Clone/index.html
+++ b/Bootstrap/Linkedin-Clone/index.html
@@ -7,13 +7,66 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <!--CSS-->
     <link rel="stylesheet" href="Csss.css">
     <link rel="stylesheet" href="fontawesome/css/all.min.css">
+    <!--Font-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <!--Favcion-->
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+
     <title>Linkedin</title>
   </head>
   <body>
     
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="#"><img class="logo" src="img/logo.png" alt=""></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <form class="form-inline my-2 my-lg-0 search">
+        <input class="form-control mr-sm-2 " type="search" placeholder="Search" aria-label="Search">
+        
+      </form>
+
+      <div class="collapse navbar-collapse " id="navbarSupportedContent">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item ">
+            <a class="nav-link" href="#">Ana Sayfa</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Ağım</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="#">İş İlanları</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="#">Mesajlaşma</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="#">Bildirimler</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="#">Ben</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="#">İş</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link " href="#">İş İlanı Yayınla</a>
+          </li>
+        </ul>
+
+      </div>
+    </nav>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
